[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sea-query = "0.30.3"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.32.0", features = ["full"]}
tokio-postgres = "0.7.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
