[package]
name = "moapick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
chrono = "0.4.31"
diesel = {version = "2.1.4", features = ["postgres", "r2d2"]}
diesel_migrations = {version = "2.1.0", features = ["postgres"]}
dotenvy = "0.15.7"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.32.0", features = ["full"]}
tower-http ={ version = "0.5.0", features = ["cors"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
